* Fix misaligned karmal energy select on Grundwerte tab

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.css
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.css
@@ -63,6 +63,7 @@ Background colour of enabled elements:
     border-width: 0.1em;
     color: #000000; /* Necessary to overwrite definition from base.css */
     font-family: serif; /* Necessary to overwrite definition from base.css */
+    margin-bottom: 0; /* Necessary to overwrite definition from base.css */
 }
 
 .charsheet input[type="number"] {
